fix(sale,return): use .toList() in SaleController and readOnly transactions in query impl (R-021, R-022)
R-021: Replace inline fully-qualified Collectors.toList() in
SaleController.buildEditForm with .toList() (Java 16+), consistent
with ReturnController and the rest of the codebase.

R-022: Add readOnly = true to all three @Transactional annotations in
DistributorReturnQueryApiImpl. Read-only transactions allow Hibernate
to skip dirty checking and let the database driver optimise reads,
matching the pattern used across all other query implementations.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>